[package]
name = "monero-secret-sharing"
version = "0.1.0"
description = "Tool to generate Monero secret shares which can be re-combined"
license = "MIT"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8"

hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

curve25519-dalek = { version = "3", features = ["std"] }
monero = "0.16"

modular-frost = { version = "0.1.0", features = ["ed25519"] }

structopt = "0.3"
